--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="fa-stack fa-2x" href="https://facebook.com/nobuto.murata">
+                    <a class="fa-stack fa-2x" href="https://www.facebook.com/nobuto.murata">
                         <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
                         <i class="fa fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
