--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="profile-card">
             <h1>Nobuto Murata</h1>
-            <img class="img-responsive img-circle profile-img" src="profile.jpg">
+            <img class="img-responsive img-circle profile-img" src="profile.jpg" alt="">
             <ul class="list-inline">
                 <li>
                     <a class="fa-stack fa-2x" href="https://twitter.com/nobuto_m">
