--- a/404.html
+++ b/404.html
@@ -14,9 +14,9 @@
 
 <body>
     <div class="container">
-        <h1>Not Found</h1>
+        <h1><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Not found</h1>
         <p>The requested URL was not found on this server.</p>
-        <p><a href="/">Back to top.</p>
+        <p><a href="/">Back to top <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p>
     </div>
 </body>
 
