--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-        <h1><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Not found</h1>
+        <h1>404 Not found</h1>
         <p>The requested URL was not found on this server.</p>
         <p><a href="/">Back to top <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p>
     </div>
