--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="/profile.css">
 </head>
 
 <body>
     <div class="container">
         <div class="profile-card">
             <h1>Nobuto Murata</h1>
-            <img class="img-responsive img-circle profile-img" src="profile.jpg" alt="">
+            <img class="img-responsive img-circle profile-img" src="/profile.jpg" alt="">
             <ul class="list-inline">
                 <li>
                     <a class="fa-stack fa-2x" href="https://twitter.com/nobuto_m">
