--- a/index.html
+++ b/index.html
@@ -15,60 +15,62 @@
 
 <body>
     <div class="container">
-        <h1>Nobuto Murata / 村田信人</h1>
         <div class="profile-card">
+            <h1>Nobuto Murata / 村田信人</h1>
             <img class="img-responsive img-circle profile-img" src="/profile.jpg" alt="">
-            <ul class="list-inline">
-                <li>
-                    <a class="fa-stack fa-2x" href="https://twitter.com/nobuto_m">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">Twitter</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="fa-stack fa-2x" href="https://www.facebook.com/nobuto.murata">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="fa-stack fa-2x" href="https://www.linkedin.com/in/nobutomurata">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">LinkedIn</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="fa-stack fa-2x" href="http://www.slideshare.net/nobuto_m">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">SlideShare</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="fa-stack fa-2x" href="https://smash-smartly.tumblr.com/">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-tumblr fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">Tumblr</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="fa-stack fa-2x" href="https://launchpad.net/~nobuto">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-rocket fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">Launchpad</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="fa-stack fa-2x" href="https://github.com/nobuto-m">
-                        <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                        <i class="fa fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                        <span class="sr-only">GitHub</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="social-icons">
+                <ul class="list-inline">
+                    <li>
+                        <a class="fa-stack fa-2x" href="https://twitter.com/nobuto_m">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="fa-stack fa-2x" href="https://www.facebook.com/nobuto.murata">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="fa-stack fa-2x" href="https://www.linkedin.com/in/nobutomurata">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="fa-stack fa-2x" href="http://www.slideshare.net/nobuto_m">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">SlideShare</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="fa-stack fa-2x" href="https://smash-smartly.tumblr.com/">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-tumblr fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">Tumblr</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="fa-stack fa-2x" href="https://launchpad.net/~nobuto">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-rocket fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">Launchpad</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="fa-stack fa-2x" href="https://github.com/nobuto-m">
+                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">GitHub</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
