display: inline-block

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="profile-card">
-            <h1>Nobuto Murata / 村田信人</h1>
+            <h1>Nobuto Murata / <span class="name-ja">村田信人</span></h1>
             <img class="img-responsive img-circle profile-img" src="/profile.jpg" alt="">
             <div class="social-icons">
                 <ul class="list-inline">
