--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="fa-stack fa-2x" href="http://www.slideshare.net/nobuto_m">
+                        <a class="fa-stack fa-2x" href="https://www.slideshare.net/nobuto_m">
                             <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fa fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">SlideShare</span>
