fix markup error

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1>404 Not found</h1>
         <p>The requested URL was not found on this server.</p>
-        <p><a href="/">Back to the top page »</p>
+        <p><a href="/">Back to the top page »</a></p>
     </div>
 </body>
 
