--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nobuto Murata / 村田信人</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha256-FMvZuGapsJLjouA6k7Eo2lusoAX9i0ShlWFG6qt7SLc=" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/profile.css">
 </head>
@@ -21,57 +20,57 @@
                 <ul class="list-inline">
                     <li>
                         <a class="fa-stack fa-2x" href="https://twitter.com/nobuto_m">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://www.facebook.com/nobuto.murata">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://www.linkedin.com/in/nobutomurata">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://www.slideshare.net/nobuto_m">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-slideshare fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">SlideShare</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://smash-smartly.tumblr.com/">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-tumblr fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-tumblr fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">Tumblr</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://launchpad.net/~nobuto">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-rocket fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">Launchpad</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://github.com/nobuto-m">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
                     </li>
                     <li>
                         <a class="fa-stack fa-2x" href="https://telegram.me/nobuto_m">
-                            <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fa fa-telegram fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-telegram fa-stack-1x fa-inverse"></i>
                             <span class="sr-only">Telegram</span>
                         </a>
                     </li>
