replace blog url

--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -47,10 +47,10 @@
                         </a>
                     </li>
                     <li>
-                        <a class="fa-stack fa-2x" href="https://smash-smartly.tumblr.com/">
+                        <a class="fa-stack fa-2x" href="https://nobuto-m.github.io/#posts">
                             <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-tumblr fa-stack-1x fa-inverse"></i>
-                            <span class="sr-only">Tumblr</span>
+                            <i class="fas fa-blog fa-stack-1x fa-inverse"></i>
+                            <span class="sr-only">Blog</span>
                         </a>
                     </li>
                     <li>
