--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -16,59 +16,59 @@
     <div class="container">
         <div class="profile-card">
             <h1>Nobuto Murata / <span class="name-ja">村田信人</span></h1>
-            <img class="img-responsive img-circle profile-img" src="/profile.jpg" alt="">
+            <img class="img-fluid rounded-circle profile-img" src="/profile.jpg" alt="">
             <div class="social-icons">
                 <ul class="list-inline">
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://twitter.com/nobuto_m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://www.facebook.com/nobuto.murata">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://www.linkedin.com/in/nobutomurata">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://www.slideshare.net/nobuto_m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">SlideShare</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://nobuto-m.github.io/#posts">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fas fa-blog fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Blog</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://launchpad.net/~nobuto">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fas fa-rocket fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Launchpad</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://github.com/nobuto-m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="list-inline-item">
                         <a class="fa-stack fa-2x" href="https://telegram.me/nobuto_m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-telegram fa-stack-1x fa-inverse" aria-hidden="true"></i>
