extra lang attribute

--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="profile-card">
-            <h1>Nobuto Murata / <span class="name-ja">村田信人</span></h1>
+            <h1>Nobuto Murata / <span lang="ja" class="name-ja">村田信人</span></h1>
             <img class="img-fluid rounded-circle profile-img" src="/profile.jpg" alt="">
             <div class="social-icons">
                 <ul class="list-inline">
