--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -25,50 +25,43 @@
                             <i class="fab fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://www.facebook.com/nobuto.murata">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://www.linkedin.com/in/nobutomurata">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://www.slideshare.net/nobuto_m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">SlideShare</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://nobuto-m.github.io/#posts">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fas fa-blog fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Blog</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://launchpad.net/~nobuto">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fas fa-rocket fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Launchpad</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://github.com/nobuto-m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://telegram.me/nobuto_m">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
                             <i class="fab fa-telegram fa-stack-1x fa-inverse" aria-hidden="true"></i>
