--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -6,6 +6,8 @@
 
     <title>Nobuto Murata / 村田信人</title>
 
+    <link rel="canonical" href="https://www.nobuto-murata.org/" />
+
     <link rel="stylesheet" href="/profile.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" />
