replace SlideShare with Speaker Deck

--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -36,10 +36,10 @@
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li><li class="list-inline-item">
-                        <a class="fa-stack" href="https://www.slideshare.net/nobuto_m">
+                        <a class="fa-stack" href="https://speakerdeck.com/nobutomurata">
                             <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fab fa-slideshare fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                            <span class="sr-only">SlideShare</span>
+                            <i class="fab fa-speaker-deck fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">Speaker Deck</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://nobuto-m.github.io/#posts">
