--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nobuto Murata / 村田信人</title>
     <link rel="canonical" href="https://www.nobuto-murata.org/">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha256-FMvZuGapsJLjouA6k7Eo2lusoAX9i0ShlWFG6qt7SLc=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/fontawesome.min.css" integrity="sha512-d0olNN35C6VLiulAobxYHZiXJmq+vl+BGIgAxQtD5+kqudro/xNMvv2yIHAciGHpExsIbKX3iLg+0B6d0k4+ZA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/solid.min.css" integrity="sha512-pZlKGs7nEqF4zoG0egeK167l6yovsuL8ap30d07kA5AJUq+WysFlQ02DLXAmN3n0+H3JVz5ni8SJZnrOaYXWBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/brands.min.css" integrity="sha512-8RxmFOVaKQe/xtg6lbscU9DU0IRhURWEuiI0tXevv+lXbAHfkpamD4VKFQRto9WgfOJDwOZ74c/s9Yesv3VvIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/profile.css">
 </head>
@@ -19,44 +23,44 @@
                 <ul class="list-inline">
                     <li class="list-inline-item">
                         <a class="fa-stack" href="https://twitter.com/nobuto_m">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fab fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-brands fa-x-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <span class="sr-only">X - Twitter</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://www.facebook.com/nobuto.murata">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fab fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-brands fa-facebook fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://www.linkedin.com/in/nobutomurata">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fab fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-brands fa-linkedin fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://speakerdeck.com/nobutomurata">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fab fa-speaker-deck fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-brands fa-speaker-deck fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Speaker Deck</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://nobuto-m.github.io/#posts">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fas fa-blog fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-solid fa-blog fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Blog</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://launchpad.net/~nobuto">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fas fa-rocket fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-brands fa-ubuntu fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">Launchpad</span>
                         </a>
                     </li><li class="list-inline-item">
                         <a class="fa-stack" href="https://github.com/nobuto-m">
-                            <i class="fas fa-circle fa-stack-2x" aria-hidden="true"></i>
-                            <i class="fab fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                            <i class="fa-solid fa-circle fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa-brands fa-github fa-stack-1x fa-inverse" aria-hidden="true"></i>
                             <span class="sr-only">GitHub</span>
                         </a>
                     </li>
