relative path for easier local testing

--- a/roles/web/files/www-home/index.html
+++ b/roles/web/files/www-home/index.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/brands.min.css" integrity="sha512-8RxmFOVaKQe/xtg6lbscU9DU0IRhURWEuiI0tXevv+lXbAHfkpamD4VKFQRto9WgfOJDwOZ74c/s9Yesv3VvIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/profile.css">
+  <link rel="stylesheet" href="profile.css">
 </head>
 <body>
   <div class="container">
     <div class="profile-card">
       <h1>Nobuto Murata / <span lang="ja" class="name-ja">村田信人</span></h1>
-      <img class="img-fluid rounded-circle profile-img" src="/profile.jpg" alt="">
+      <img class="img-fluid rounded-circle profile-img" src="profile.jpg" alt="">
       <div class="social-icons">
         <ul class="list-inline">
           <li class="list-inline-item">
